# ros-indigo-HuskyA200

src/beginner_tutorials/: CMakeLists.txt  custom_rosconsole.conf  package.xml
src/beginner_tutorials/launch/: talker.launch
src/beginner_tutorials/src/: talker.cpp
src/custom_husky_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/custom_husky_gazebo/launch/: husky_empty_world.launch  husky_empty_world.launch~  husky_hallway_world.launch  husky_landmark.launch  spawn_husky.launch  spawn_husky.launch~
src/custom_husky_gazebo/urdf/: description.gazebo.xacro  description.gazebo.xacro~  husky.gazebo.xacro  husky.gazebo.xacro~
src/custom_husky_gazebo/worlds/: custom_play_pin.world  empty.world  hallway.world  husky_landmark.world  six_boxes.world
src/husky_hallway_pid/: CMakeLists.txt  package.xml
src/husky_hallway_pid/launch/: husky_wall_following.launch
src/husky_hallway_pid/msg/: pid_input.msg
src/husky_hallway_pid/src/: control.py  control_real.py  dist_scan.py  husky_ekf_localization.py
src/huskybot_ekf/: CMakeLists.txt  package.xml
src/huskybot_ekf/src/: meas_update.py
src/huskybot_ekf_v2/: CMakeLists.txt  package.xml
src/huskybot_ekf_v2/launch/: sample_data.launch  sim_sample_data.launch
src/huskybot_ekf_v2/src/: custom_scan.py  ekf_localization_known_correspondences.py  ekf_localization_known_correspondences_2.py  ekf_localization_known_correspondences_filtered.py  meas_update.py  meas_update_2.py  odom_gyro_ekf.py  odom_gyro_gps_ekf.py  odom_imu_ekf.py  odom_kvhgyro_ekf.py  odom_midg_ekf.py  odom_midg_gps_imu_ekf.py  odom_midg_imu_ekf.py  publish_odom_filtered_pose.py  publish_odom_pose.py  (+4 more)
src/random_husky_driver/: CMakeLists.txt  package.xml
(+4 files in other folders)
